Version 1.8.1-7
------------------------------------------------------------------------------
General:
* "view_spss" is now deprecated. Use "view_df" instead.

New functions:
* "sjp.poly" to plot polynomial curves for linear regressions.

Changes to functions:
* Model and table summaries in plotting functions (like "sjp.lm" or "sjp.grpfrq") are no longer printed by default. Use "showTableSummary = TRUE" or "showModelSummary = TRUE" to print summaries in plots.
* Added more plotting type options (see "type" parameter) to "sjp.glm", "sjp.glmer", "sjp.lm" and "sjp.lmer": "eff" for plotting marginal effects of model terms, and "poly" to plot predicted values of polynomial terms (only for linear (mixed) models).
* Added parameter "int.term" to "sjp.int", to plot selected interaction terms for "type = 'eff'" only. May be used in cases where effect computation takes too long or even crashes due to out-of-memory-problems.
* Added parameter "axisLimits.x" to "sjp.int", "sjp.frq" and "sjp.grpfrq".
* Added parameter "showAICc" to "sjt.lm", "sjt.glm", "sjt.lmer" and "sjt.glmer" to print second-order AIC.
* Improved automatic y-axis-limit detection in "sjp.frq" and "sjp.grpfrq".
* Minor improvements to "sjp.likert", "sjp.int", "sjp.glm", "sjp.frq" and "sjp.grpfrq".

Bug fixes:
* "sjp.int" sometimes crashed with mixed models, due to slow Kenward-Roger-computation of standard errors, provided by the "effects"-package. Fixed, "KR"-parameter, when calling "allEffects", now defaults to "FALSE".
* Fixed bug in "view_spss", where frequencies were not displayed correctly when a category value had zero counts.
* Fixed bug in "sjp.frq" and "sjt.frq", where non-incremental levels in some cases were not displayed correctly.
* Fixed bug in "sjp.frq" and "sjt.frq", where categories of ordered factors were messed up.
* Some minor bug fixes.

Version 1.8.1
------------------------------------------------------------------------------
General: